--- a/HandsOnLab/Start/DevDaysSpeakers/DevDaysSpeakers.Shared/View/SpeakersPage.xaml
+++ b/HandsOnLab/Start/DevDaysSpeakers/DevDaysSpeakers.Shared/View/SpeakersPage.xaml
@@ -3,5 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DevDaysSpeakers.View.SpeakersPage"
              Title="Speakers">
-
+  <StackLayout Spacing="0">
+    <Button Text="Sync Speakers" Command="{Binding GetSpeakersCommand}"/>
+    <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}"/>
+    <ListView x:Name="ListViewSpeakers"
+              ItemsSource="{Binding Speakers}">
+      <!--ここに ItemTemplate を追加-->
+      <ListView.ItemTemplate>
+        <DataTemplate>
+          <ImageCell Text="{Binding Name}"
+                      Detail="{Binding Title}"
+                      ImageSource="{Binding Avatar}"/>
+        </DataTemplate>
+      </ListView.ItemTemplate>
+    </ListView>
+  </StackLayout>
 </ContentPage>
